v2.5
General improvements
