# app/app.py
@@ -4,56 +4,86 @@ import importlib
 import requests as req
 from bs4 import BeautifulSoup
 from celery import Celery
-from flask import Flask, jsonify
+from flask import Flask, jsonify, render_template
 from flask import request as flask_request
-from sqlalchemy import create_engine, func
+from sqlalchemy import create_engine
 from sqlalchemy.orm import sessionmaker, exc
+
 
 Requests = importlib.import_module(".", "models").Requests
 Status = importlib.import_module(".", "models").Status
 DATABASE_URI = importlib.import_module(".", "settings").DATABASE_URI
-
+MAX_PAGE_SIZE = importlib.import_module(".", "settings").MAX_PAGE_SIZE
+RESPONSE = importlib.import_module(".", "models").list_model
 
 app = Flask(__name__)
 app.config['CELERY_RESULT_BACKEND'] = 'redis://localhost:6379/0'
 app.config['DEBUG'] = True
 celery = Celery(app.name, broker='redis://localhost:6379/0')
 
-
 engine = create_engine(DATABASE_URI)
-Session = sessionmaker(bind=engine)
+Session = sessionmaker(engine)
 
+def cancel_request(id):
+    try:
+        session = Session()
+        session.query(Requests) \
+            .filter(Requests.id == id) \
+            .update({Requests.status: Status.invalid})
+        session.commit()
+    except BaseException as ex:
+        session.rollback()
+        raise ex
+    finally:
+        session.close()
 
 def create_request_object():
     body = flask_request.get_json(force=True)
     url = body["url"]
     if is_url_valid(url):
-        sess = Session()
-        __request = Requests(url=url, status=Status.preparing, website_text="", images=[])
-        sess.add(__request)
-        sess.flush()
-        print(__request.id)
-        id = __request.id
-        sess.commit()
+        request = Requests(url=url, status=Status.preparing, website_text="", images=[])
+        try:
+            session = Session()
+            session.add(request)
+            session.flush()
+            id = request.id
+            session.commit()
+        except BaseException as ex:
+            session.rollback()
+            raise ex
+        finally:
+            session.close()
         return url, id, True
     else:
         return url, None, False
 
 
 def finish_images_request(urls, target_id):
-    session = Session()
-    session.query(Requests) \
-        .filter(Requests.id == target_id) \
-        .update({Requests.images: urls, Requests.status: Status.done})
-    session.commit()
+    try:
+        session = Session()
+        session.query(Requests) \
+            .filter(Requests.id == target_id) \
+            .update({Requests.images: urls, Requests.status: Status.done})
+        session.commit()
+    except BaseException as ex:
+        session.rollback()
+        raise ex
+    finally:
+        session.close()
 
 
 def finish_text_request(text, target_id):
-    session = Session()
-    session.query(Requests) \
-        .filter(Requests.id == target_id) \
-        .update({Requests.website_text: text, Requests.status: Status.done})
-    session.commit()
+    try:
+        session = Session()
+        session.query(Requests) \
+            .filter(Requests.id == target_id) \
+            .update({Requests.website_text: text, Requests.status: Status.done})
+        session.commit()
+    except BaseException as ex:
+        session.rollback()
+        raise ex
+    finally:
+        session.close()
 
 
 def is_url_valid(url):
@@ -70,8 +100,8 @@ def is_url_valid(url):
 def validate_id(id):
     if not id.isnumeric():
         return None, False
-    session = Session()
     try:
+        session = Session()
         object = session.query(Requests) \
             .filter(Requests.id == id).one()
         return object, True
@@ -132,6 +162,7 @@ def create_image_request():
         try:
             page = req.get(url)
         except req.exceptions.ConnectionError:
+            cancel_request(id)
             return "Invalid url or couldn't connect", 400
         get_images(page, url, id)
         return jsonify({"id": id}), 201
@@ -146,11 +177,61 @@ def create_text_request():
         try:
             page = req.get(url)
         except req.exceptions.ConnectionError:
+            cancel_request(id)
             return "Invalid url or couldn't connect", 400
         get_text(page, id)
         return jsonify({"id": id}), 201
     else:
         return "Invalid url", 400
+
+
+@app.route("/list/", methods=["GET", "POST"])
+def show_entries():
+    response = RESPONSE
+    if flask_request.method == "GET":
+        return render_template('input.html')
+
+    elif flask_request.method == "POST":
+        page = flask_request.form["page"]
+        limit = flask_request.form["limit"]
+        style = '"text-align: center; vertical-align: middle;"'
+        if page is None or limit is None:
+            return render_template('input.html')
+
+        if not page.isnumeric():
+            return f"Bad Request - invalid page: {page} is not a number", 404
+        if not limit.isnumeric():
+            return f"Bad Request - invalid limit: {limit} is not a number", 404
+
+        page = int(page)
+        limit = int(limit)
+        if page <= 0:
+            return "Bad Request - invalid page: <= 0", 400
+        if limit <= 0:
+            return "Bad Request - invalid limit: <= 0", 400
+        if limit > MAX_PAGE_SIZE:
+            return f"Bad Request - limit bigger than {MAX_PAGE_SIZE}", 400
+
+        try:
+            session = Session()
+            query = session.query(Requests).limit(limit).offset((page-1) * limit).all()
+            query.sort(key= lambda entry: entry.id)
+        except BaseException as ex:
+            raise ex
+        finally:
+            session.close()
+
+        status_converter = {Status.done: "Done", Status.preparing: "In progress", Status.invalid: "Error while processing"}
+
+        for result in query:
+
+            response += '<tr>' \
+                        f'<td style={style}>{result.id}</td>' \
+                        f'<td style={style}>{result.url}</td>' \
+                        f'<td style={style}>{status_converter[result.status]}</td>' \
+                        '</tr>'
+        response += "</table>"
+        return response
 
 
 @celery.task
